Update best scroll

--- a/public/contact.html
+++ b/public/contact.html
@@ -83,6 +83,8 @@ footer {
             <h2>Get in Touch</h2>
             <p>For any inquiries, support, or partnership opportunities, please contact us via WhatsApp:</p>
             <a href="https://wa.me/254740405040" class="whatsapp-button" target="_blank">Chat with Us on WhatsApp</a>
+            <br>
+            <a href="/" class="whatsapp-button">Continue Trading</a>
         </section>
     </main>
     <footer>
