--- a/public/index.html
+++ b/public/index.html
@@ -131,47 +131,12 @@
     <div class="container" id="arbitrage-container"></div>
 
     <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js";
-        import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-auth.js";
-
-        // Your web app's Firebase configuration
-        const firebaseConfig = {
-            apiKey: "AIzaSyCGBaJh_XfmlTuBA0xQJJ4c-R5S4tZ6ib0",
-            authDomain: "arbitrage-4a92b.firebaseapp.com",
-            databaseURL: "https://arbitrage-4a92b-default-rtdb.firebaseio.com",
-            projectId: "arbitrage-4a92b",
-            storageBucket: "arbitrage-4a92b.appspot.com",
-            messagingSenderId: "864484742329",
-            appId: "1:864484742329:web:64e6ce8073f2ba5ba6f768",
-            measurementId: "G-2SYWWVM5P4"
-        };
-
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const auth = getAuth(app);
-
-        // Check authentication state
-        onAuthStateChanged(auth, async (user) => {
-            if (user) {
-                // User is signed in
-                const idToken = await user.getIdToken();
-                fetchArbitrageOpportunities(idToken);
-            } else {
-                // No user is signed in
-                window.location.href = '/login';
-            }
-        });
-
+      
         // Fetch arbitrage opportunities
         function fetchArbitrageOpportunities(idToken) {
             $('#loading-container').show();
             $('#arbitrage-container').hide();
-            fetch('/arbitrage', {
-                method: 'GET',
-                headers: {
-                    'Authorization': `Bearer ${idToken}`
-                }
-            })
+            fetch('/arbitrage')
             .then(response => response.json())
             .then(data => {
                 const container = $('#arbitrage-container');
