--- a/public/index.html
+++ b/public/index.html
@@ -133,7 +133,7 @@
     <script type="module">
       
         // Fetch arbitrage opportunities
-        function fetchArbitrageOpportunities(idToken) {
+        function fetchArbitrageOpportunities() {
             $('#loading-container').show();
             $('#arbitrage-container').hide();
             fetch('/arbitrage')
