--- a/public/index.html
+++ b/public/index.html
@@ -46,11 +46,13 @@
             margin-bottom: 20px;
         }
         .container {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 10px;
-            padding: 0 10px;
-        }
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-auto-flow: column;
+    gap: 10px;
+    padding: 0 10px;
+}
+
         .opportunity-card {
             background-color: #fff;
             border-radius: 8px;
