--- a/public/index.html
+++ b/public/index.html
@@ -47,11 +47,11 @@
         }
         .container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* Or specific number of columns */
     grid-auto-flow: column;
     gap: 10px;
     padding: 0 10px;
-}
+        }
 
         .opportunity-card {
             background-color: #fff;
