--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
                
             } else {
                 // Not authenticated, show limited arbitrage opportunities
-                document.getElementById('status').textContent = ' <a href="./pay">Support</a> us to View baove 1%.';
+                document.getElementById('status').textContent = ' <a href="./pay">Support</a> us to View above 1%.';
                 fetchArbitrageOpportunities(false);
             }
         });
