--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script>
-        // Function to get a cookie value by name
-        function getCookie(name) {
-            const value = `; ${document.cookie}`;
-            const parts = value.split(`; ${name}=`);
-            if (parts.length === 2) return parts.pop().split(';').shift();
-        }
-
-        document.addEventListener('DOMContentLoaded', function() {
-            const paymentReference = getCookie('payment_reference');
-
-            if (paymentReference) {
-                // User is authenticated based on payment reference
-                document.getElementById('status').innerHTML = `Thanks for <a href="./pay">Support</a> !`;
-                fetchArbitrageOpportunities(true);
-               
-            } else {
-                // Not authenticated, show limited arbitrage opportunities
-                document.getElementById('status').innerHTML = '! <a href="./pay">Support</a> us to View above 1%.';
-                fetchArbitrageOpportunities(false);
-            }
-        });
-    </script>
-    <!-- Google Tag Manager -->
+      <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
@@ -169,7 +146,7 @@
         <div class="spinner"></div>
         <p>Loading data...</p>
     </div>
-    <p id="status">Checking authentication...</p>
+    <p class="status">Checking authentication...</p>
     <div class="container" id="arbitrage-container"></div>
 
     <script type="module">
@@ -210,7 +187,7 @@
                             <div class="arbit-investment">
                                 <h2>Invest <b>$${investment}</b> to get <u>$5</u> profit</h2>
                             </div>
-                            <p id="status">Checking authentication...</p>
+                            <p class="status">Checking authentication...</p>
                         </div>`;
 
                     // Set background color based on the percentage difference
@@ -237,6 +214,30 @@
                 document.getElementById('arbitrage-container').style.display = 'flex'; // Ensure the container is displayed correctly
             }
         }
+   
+        // Function to get a cookie value by name
+        function getCookie(name) {
+            const value = `; ${document.cookie}`;
+            const parts = value.split(`; ${name}=`);
+            if (parts.length === 2) return parts.pop().split(';').shift();
+        }
+
+        document.addEventListener('DOMContentLoaded', function() {
+            const paymentReference = getCookie('payment_reference');
+            const statusElements = document.getElementsByClassName('status');
+if (statusElements.length > 0) {
+    if (paymentReference) {
+        // User is authenticated based on payment reference
+        statusElements[0].innerHTML = `Thanks for <a href="./pay">Support</a> !`;
+        fetchArbitrageOpportunities(true);
+    } else {
+        // Not authenticated, show limited arbitrage opportunities
+        statusElements[0].innerHTML = '! <a href="./pay">Support</a> us to View above 1%.';
+        fetchArbitrageOpportunities(false);
+    }
+}
+
+        });
     </script>
 </body>
 </html>
