--- a/public/pay.html
+++ b/public/pay.html
@@ -81,7 +81,7 @@
             <input type="email" id="email" name="email" required>
 
             <label for="amount">Amount (in KES):</label>
-            <input type="number" id="amount" name="amount" required>
+            <input type="number" id="amount" name="amount" value="50" readonly>
 
             <button type="submit">Pay Now</button>
             <p id="error-message" class="error-message">Please enter valid details.</p>
